# safe-result

./: README.md  pyproject.toml
src/safe_result/: __init__.py
tests/: test_result.py
