[project]
name = "safe-result"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "overflowy", email = "overflowy@riseup.net" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
